# highlightos

./: .gitignore  CHANGELOG.md  CNAME  README-it.md  README-pl.md  README.md  README.pl-PL.md  TODO  boot.asm  core.html  old_boot.asm  print.html  searchindex.js
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  crash-report.md  crash_report.md  feature_request.md
.github/workflows/: asm.yml  gh-pages.yml  rust.yml  stats.yml
asm/: boot.asm
book/: book.toml
book/src/: SUMMARY.md  building.md  commands.md  core.md  highlightos.md  usage.md
book/theme/: index.hbs
docs/: CNAME  index.html  searchindex.json
kernel/: Cargo.toml  rust-toolchain  rustfmt.toml
kernel/src/: allocator.rs  interrupts.rs  keyboard_buffer.rs  lib.rs  main.rs  mem.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/cmd/: mod.rs
main/: 404.html  building.html  commands.html  core.html  highlightos.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
main/theme/: custom.css
rust/: hlshell.rs
shell/: 2q  Cargo.toml  TODO  hlshell  hlshell.rs  setup.sh  target.json
shell/.cargo/: config.toml
shell/src/: allocator.rs  commands.rs  gdt.rs  history.rs  interrupts.rs  keyboard_buffer.rs  lib.rs  main.rs  mem.rs  vga_buffer.rs
shell/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
shell/src/cmd/: mod.rs
shell/src/res/: commands.rs
