[package]
name = "hlshell"
version = "0.3.0"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
edition = "2021"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.bootloader]
version = "0.9"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
