[package]
name = "hlshell"
version = "0.3.2"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
edition = "2021"

[dependencies]
volatile = "0.2"
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.3"
pic8259 = "0.10"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9"

[dependencies.bootloader]
version = "0.9"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.1"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
